# tree-sitter-klar

./: .gitignore  .prettierrc  Cargo.toml  README.md  binding.gyp  cspell.json  example.kl  example.lua  example.py  example.rs  example.ts  exapmle.rs  grammar.js  package-lock.json  package.json
queries/: highlights.scm
queries/klar/: highlights.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: all.txt
